recursion.lessons.recursion.polygonfractal.PolygonFractal.scala.error
PolygonFractal:10: error: not found: value skrink
		polygonFractal(levels-1,sides,length*shrink,skrink)
                                                            ^